# airflow-core/src/airflow/api_fastapi/core_api/openapi/v1-rest-api-generated.yaml
@@ -8829,6 +8829,9 @@ components:
         dag_id:
           type: string
           title: Dag Id
+        dag_display_name:
+          type: string
+          title: Dag Display Name
         stats:
           items:
             $ref: '#/components/schemas/DagStatsStateResponse'
@@ -8837,6 +8840,7 @@ components:
       type: object
       required:
       - dag_id
+      - dag_display_name
       - stats
       title: DagStatsResponse
       description: DAG Stats serializer for responses.
